[r=andreserl][bug=1677631][author=ricgard] Sets overflow on sticky attr to fix the scrolling issue

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -116,6 +116,10 @@
     border-bottom: 3px solid #e95420;
   }
 
+  div[sticky] {
+    overflow: hidden;
+  }
+
   .table {
 
     .table__row {
